# SoftWorld

./: .gitignore  CMakeLists.txt  README.md  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sceneview.h  testthread.cpp  testthread.h
CozyWidgets/: statebutton.cpp  statebutton.h
Inspector/: action.h  coloricon.cpp  coloricon.h  editingmanager.h  inspectableaction.cpp  inspectableaction.h  inspectableparam.h  inspectableparamslist.cpp  inspectableparamslist.h  inspector.cpp  inspector.h  inspectorbutton.cpp  inspectorbutton.h  inspectorcolorfield.cpp  inspectorcolorfield.h  inspectorcontext.cpp  inspectorcontext.h  inspectorfield.cpp  inspectorfield.h  inspectorheader.cpp  inspectorheader.h  inspectorintegerfield.h  inspectoritem.cpp  inspectoritem.h  inspectorlabel.cpp  inspectorlabel.h  inspectorlabelmanager.cpp  inspectorlabelmanager.h  inspectornumericfield.cpp  inspectornumericfield.h  inspectorparamslist.cpp  inspectorparamslist.h  inspectorstringfield.cpp  inspectorstringfield.h  lockableobject.h  slidermanagers.cpp  slidermanagers.h
Physics/: drawingstyle.cpp  drawingstyle.h  editonlybody.cpp  editonlybody.h  fileworks.cpp  fileworks.h  ghostbody.cpp  ghostbody.h  igball.cpp  igball.h  igshell.cpp  igshell.h  linesintersectioninfo.cpp  linesintersectioninfo.h  physicalbody.cpp  physicalbody.h  polygonphysicalshape.cpp  polygonphysicalshape.h  polypoint.cpp  polypoint.h  serialize.cpp  serialize.h  softscene.cpp  softscene.h  springmassbody.cpp  springmassbody.h  testpolybody.cpp  testpolybody.h
Serialize/: all_serializable.h  deser_helpers.h  deserialize.cpp  deserialize.h  desertab.h  saveid.cpp  ser_class_enums.h  sergen.py  serializable_classes.txt  serialization_readme.md  serialize.h  serialize_special.cpp  serialize_special.h  serialize_ui.cpp  serialize_ui.h
Threads/: drawingthread.cpp  drawingthread.h  physicalthread.cpp  physicalthread.h  simulationthreadscontroller.cpp  simulationthreadscontroller.h
UI/: pallete.cpp  pallete.h  palleteitem.cpp  palleteitem.h  sceneview.cpp  sceneview.h
Utils/: colorutility.cpp  colorutility.h  cstringcomparator.cpp  cstringcomparator.h  drawingstyle.cpp  drawingstyle.h  fileworks.cpp  fileworks.h  icons.cpp  icons.h  serialization_readme.md  serialize.cpp  serialize.h
